fix(web/client): grid blocks keep shifting
this causes the piece text to not be centered though

--- a/santoriniWebsite/client/src/pages/game.css
+++ b/santoriniWebsite/client/src/pages/game.css
@@ -1,6 +1,12 @@
+.game-row {
+    max-height: 160px;
+}
+
 .game-space {
     width: 160px;
     height: 160px;
+    max-width: 160px;
+    max-height: 160px;
     margin: auto;
 }
 
@@ -21,9 +27,7 @@
 }
 
 .piece {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
     display: inline-block;
-    margin: 0;
+    position: absolute;
+    text-align: center;
 }
